--- a/scss/style.scss
+++ b/scss/style.scss
@@ -112,7 +112,7 @@ $responsiveType: 2;
 @import "blocks/footer";
 @import "blocks/header";
 @import "blocks/partners";
-
+@import "blocks/request-text";
 @import "blocks/request";
-@import "blocks/modalrequestform";
 @import "blocks/modalwindow";
+@import "blocks/modalrequestform";
