--- a/scss/blocks/_request.scss
+++ b/scss/blocks/_request.scss
@@ -1,15 +1,35 @@
 .request {
-  &__container {
-    @include adaptiv-value("margin-top", 90, 13, 0);
-    // margin-top: 90px;
-  }
+  /* ------- подложка модального окна ------- */
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: none;
+  width: 100%;
+  height: 100%;
+  // max-width: 870px;
+  // max-height: 748px;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: rgb(207, 190, 190);
 
-  &__row {
+  &__container {
+    @include adaptiv-value("max-width", 870, 300, 0);
+    @include adaptiv-value("max-height", 748, 550, 0);
+    max-width: 870px;
+    // max-height: 748px;
+    margin: 0px auto;
+    position: relative;
     display: flex;
     flex-direction: column;
-    // justify-content: space-evenly;
     align-items: center;
-    padding: 0px 33px;
+    // width: 100%;
+    // padding: 40px;
+    background-color: rgb(30, 29, 29);
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    // max-height: 80vh;
+    // overflow-y: auto;
   }
 
   &__title {
@@ -31,6 +51,7 @@
   }
 
   &__input {
+    color: rgb(207, 190, 190);
     margin: 22px auto;
     // padding: 0 20px;
     // border: none;
@@ -52,10 +73,13 @@
   }
 
   &__pesonaldata {
+    color: rgb(207, 190, 190);
     font-weight: 500;
-    font-size: 15px;
-    line-height: 18px;
-    color: #ffffff;
+    @include adaptiv-value("font-size", 15, 8, 0);
+    @include adaptiv-value("line-height", 18, 12, 0);
+    // font-size: 15px;
+    // line-height: 18px;
+    // color: #ffffff;
   }
 
   &__btns {
