--- a/css/style.css
+++ b/css/style.css
@@ -831,8 +831,9 @@ h6 {
   background-color: rgba(0, 0, 0, 0.5);
 }
 .modal-request__content {
-  max-width: 870px;
-  max-height: 748px;
+  color: rgb(255, 255, 255);
+  max-width: calc(290px + 580 * (100vw - 320px) / 1600);
+  max-height: calc(390px + 358 * (100vw - 320px) / 1600);
   margin: 10px auto;
   position: relative;
   display: -webkit-box;
@@ -861,8 +862,8 @@ h6 {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: end;
-  width: 348px;
-  height: 648px;
+  max-width: calc(230px + 118 * (100vw - 320px) / 1600);
+  max-height: calc(330px + 318 * (100vw - 320px) / 1600);
   background-image: url(../img/modal/1.png);
   background-position: center center;
   background-repeat: no-repeat;
@@ -873,8 +874,8 @@ h6 {
   padding-left: 31px;
   padding-bottom: 15px;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: calc(9px + 7 * (100vw - 320px) / 1600);
+  line-height: calc(12px + 8 * (100vw - 320px) / 1600);
 }
 .modal-request__body {
   display: -webkit-box;
@@ -890,7 +891,7 @@ h6 {
   position: absolute;
   top: 8px;
   right: 14px;
-  font-size: 30px;
+  font-size: calc(20px + 10 * (100vw - 320px) / 1600);
   color: #f6f3f3;
   opacity: 0.5;
   font-weight: 700;
@@ -900,13 +901,13 @@ h6 {
 }
 .modal-request__title {
   text-align: center;
-  font-size: 22px;
+  font-size: calc(12px + 10 * (100vw - 320px) / 1600);
   text-transform: uppercase;
 }
 .modal-request__text {
   font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: calc(9px + 11 * (100vw - 320px) / 1600);
+  line-height: calc(16px + 8 * (100vw - 320px) / 1600);
   text-align: center;
 }
 .modal-request__text p {
