--- a/scss/blocks/_modalrequestform.scss
+++ b/scss/blocks/_modalrequestform.scss
@@ -11,8 +11,11 @@
   background-color: rgba(0, 0, 0, 0.5);
 
   &__content {
-    max-width: 870px;
-    max-height: 748px;
+    color: rgba(255, 255, 255, 1);
+    @include adaptiv-value("max-width", 870, 290, 0);
+    @include adaptiv-value("max-height", 748, 390, 0);
+    // max-width: 870px;
+    // max-height: 748px;
     margin: 10px auto;
     position: relative;
     display: flex;
@@ -29,8 +32,10 @@
     display: flex;
     flex-direction: column;
     justify-content: end;
-    width: 348px;
-    height: 648px;
+    @include adaptiv-value("max-width", 348, 230, 0);
+    @include adaptiv-value("max-height", 648, 330, 0);
+    // width: 348px;
+    // height: 648px;
     background-image: url(../img/modal/1.png);
     background-position: center center;
     background-repeat: no-repeat;
@@ -40,8 +45,10 @@
       padding-left: 31px;
       padding-bottom: 15px;
       font-weight: 500;
-      font-size: 16px;
-      line-height: 20px;
+      @include adaptiv-value("font-size", 16, 9, 0);
+      @include adaptiv-value("line-height", 20, 12, 0);
+      // font-size: 16px;
+      // line-height: 20px;
     }
   }
 
@@ -55,7 +62,8 @@
     position: absolute;
     top: 8px;
     right: 14px;
-    font-size: 30px;
+    @include adaptiv-value("font-size", 30, 20, 0);
+    // font-size: 30px;
     color: #f6f3f3;
     opacity: 0.5;
     font-weight: 700;
@@ -66,14 +74,17 @@
 
   &__title {
     text-align: center;
-    font-size: 22px;
+    @include adaptiv-value("font-size", 22, 12, 0);
+    // font-size: 22px;
     text-transform: uppercase;
   }
 
   &__text {
     font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
+    @include adaptiv-value("font-size", 20, 9, 0);
+    @include adaptiv-value("line-height", 24, 16, 0);
+    // font-size: 20px;
+    // line-height: 24px;
     text-align: center;
     p {
       margin-top: 35px;
