--- a/scss/blocks/_modalwindow.scss
+++ b/scss/blocks/_modalwindow.scss
@@ -11,6 +11,7 @@
   background-color: rgba(0, 0, 0, 0.8);
 
   &__content {
+    color: rgba(255, 255, 255, 1);
     @include adaptiv-value("max-width", 870, 300, 0);
     @include adaptiv-value("max-height", 748, 550, 0);
     // max-width: 870px;
